Fix QSGVideoNode rendering of frames with stride != width.

Adjust texture coordinates to not render padding at the end of lines,
and better calculate the stride of UV planes.

Task-number: QTBUG-38218
Task-number: QTBUG-30447
Change-Id: I7b7577979719c48460b838f7dcc89b9d17741f79
Reviewed-by: Yoann Lopes <yoann.lopes@digia.com>